--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <p>Ведущий свадебных торжеств <br>подготовка и проведение вашего праздника</p>
       </div>
     </div>
-    <a href="#" class="main-down"><i class="icon-down"></i></a>
+    <a href="#portfolio" class="main-down slowly"><i class="icon-down"></i></a>
   </div> 
 
-  <div class="portfolio">
+  <div class="portfolio" id="portfolio">
     <div class="container">
       <h2 class="section-header">Портфолио</h2>
       <div class="row">
@@ -111,6 +111,16 @@
           var work = $(this).attr('data-work');
           var modal = $('.modal');
           modal.find('.modal-body').load(work+'.html');
+        });
+      });
+    </script>
+    <script type="text/javascript">
+      $(document).ready (function(){
+        $(".slowly").on("click",function(event) {
+          event.preventDefault();
+          var id = $(this).attr('href'),
+          top = $(id).offset().top;
+          $('body,html').animate ({scrollTop: top}, 800);
         });
       });
     </script>
