--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         <div class="col-md-4">
           <div class="portfolio-block">
             <img src="img/portfolio/1.jpg" alt="Работа №1">
-            <a data-toggle="modal" data-work="work-1" href="#work">Смотреть работу</a>
+            <a data-toggle="modal" data-work="work-1" href="#work">Свадьбы</a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="portfolio-block">
             <img src="img/portfolio/2.jpg" alt="Работа №2">
-            <a data-toggle="modal" data-work="work-2" href="#work">Смотреть работу</a>
+            <a data-toggle="modal" data-work="work-2" href="#work">Корпоративы</a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="portfolio-block">
             <img src="img/portfolio/3.jpg" alt="Работа №3">
-            <a data-toggle="modal" data-work="work-3" href="#work">Смотреть работу</a>
+            <a data-toggle="modal" data-work="work-3" href="#work">Конкурсы</a>
           </div>
         </div>
       </div>
@@ -72,14 +72,14 @@
   <div class="col-lg-6">
     <strong>Подпишитесь</strong>
       <div class="social-links">
-      <a href="#"><i class="icon-vk"></i></a>
-      <a href="#"><i class="icon-instagram"></i></a>
-      <a href="#"><i class="icon-mail"></i></a>
+      <a href="https://vk.me/a.shibkov"><i class="icon-vk"></i></a>
+      <a href="https://www.instagram.com/a.shibkov"><i class="icon-instagram"></i></a>
+      <a href="mailto:a.a.shibkov@mail.ru?subject=Хочу забронировать дату"><i class="icon-mail"></i></a>
       </div>
     </div>
     <div class="col-lg-3">
       <strong>Напишите мне</strong>
-      <a href="https://vk.me/bast3r" class="offer-btn">Заказать сайт</a>
+      <a href="https://vk.me/bast3r" class="offer-btn">Забронировать дату</a>
     </div>
   </div>
   </div>
