--- a/work-1.html
+++ b/work-1.html
@@ -3,8 +3,8 @@
 		<img src="img/portfolio/1.jpg" alt="Первая работа	">
 	</div>
 	<div class="col-lg-7">
-		<h4>Сайт для ресторана</h4>
-		<p>Описание сайта</p>
-		<a href="https://vk.me/aislam23" class="modal-btn">Заказать такой сайт</a>
+		<h4>Проведение свадебных мероприятий</h4>
+		<p>Проведение торжества на ваше усмотрение</p>
+		<a href="https://vk.me/a.shibkov" class="modal-btn">Забронировать дату</a>
 	</div>
 </div>
