--- a/work-2.html
+++ b/work-2.html
@@ -3,8 +3,8 @@
 		<img src="img/portfolio/2.jpg" alt="Вторая работа	">
 	</div>
 	<div class="col-lg-7">
-		<h4>Сайт для еще чего-то</h4>
-		<p>Описание сайта</p>
-		<a href="https://vk.me/aislam23" class="modal-btn">Заказать такой сайт</a>
+		<h4>Корпоративные мероприятия</h4>
+		<p>Проведу корпоратив весело и задорно</p>
+		<a href="https://vk.me/a.shibkov" class="modal-btn">Забронировать дату</a>
 	</div>
 </div>
