--- a/work-3.html
+++ b/work-3.html
@@ -3,8 +3,8 @@
 		<img src="img/portfolio/3.jpg" alt="Третья работа	">
 	</div>
 	<div class="col-lg-7">
-		<h4>Сайт для третьей работы</h4>
-		<p>Описание сайта</p>
-		<a href="https://vk.me/aislam23" class="modal-btn">Заказать такой сайт</a>
+		<h4>Проведение конкурсов</h4>
+		<p>Проведу конкурс на высшем уровне</p>
+		<a href="https://vk.me/a.shibkov" class="modal-btn">Забронировать дату</a>
 	</div>
 </div>
