--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://basterql.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Анатолий Шибков - Ведущий свадебных торжеств">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://basterql.github.io/img/main-bg.jpg">
     <meta property="og:description" content="Закажите проведение праздника">
     <meta property="og:site_name" content="Портфолио ведущего">
     <meta property="article:author" content="Анатолий Шибков">
