--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="col-lg-3">
       <strong>Напишите мне</strong>
-      <a href="https://vk.me/bast3r" class="offer-btn">Забронировать дату</a>
+      <a href="https://vk.me/a.shibkov" class="offer-btn">Забронировать дату</a>
     </div>
   </div>
   </div>
