--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://basterql.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Анатолий Шибков - Ведущий свадебных торжеств">
-    <meta property="og:image" content="http://basterql.github.io/img/ill.jpg">
+    <meta property="og:image" content="http://basterql.github.io/img/ill.jpg" />
     <meta property="og:description" content="Закажите проведение праздника">
     <meta property="og:site_name" content="Портфолио ведущего">
     <meta property="article:author" content="Анатолий Шибков">
