--- a/igor/index.html
+++ b/igor/index.html
@@ -87,7 +87,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Свяжитесь со мной</h2>
-						<p>Заполните простую форму, и я обязательно отвечу Вам в бизжайшее время!</p>
+						<p>Заполните простую форму, и я обязательно отвечу Вам в близжайшее время!</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
 							<form method="post" action="#">
